[gd_scene load_steps=33 format=3 uid="uid://bj3qd45iobklu"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_50uxn"]
[ext_resource type="Texture2D" uid="uid://bmvcd8i3mvclv" path="res://Assets/Characters/Hero Knight/Sprites/HeroKnight/HeroKnight.png" id="2_y5m0e"]
[ext_resource type="AudioStream" uid="uid://poch2qrs1ia6" path="res://Assets/sounds/slash-21834.mp3" id="3_0q5kj"]
[ext_resource type="AudioStream" uid="uid://0k0bmk56qdby" path="res://Assets/sounds/person-knocked-down-14798.mp3" id="4_e7imv"]

[sub_resource type="Animation" id="Animation_vi650"]
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3mn8l"]
resource_name = "attack"
length = 0.24
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.07, 0.11, 0.14, 0.17, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_rsf2q"]
resource_name = "die"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.237245, 0.374491, 0.530359, 0.688887, 0.847415, 1.01659, 1.19374, 1.37089),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55, 56, 57]
}

[sub_resource type="Animation" id="Animation_w8571"]
resource_name = "hurt"
length = 0.7
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48, 0]
}

[sub_resource type="Animation" id="Animation_ew2jv"]
resource_name = "idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 210),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_uoqy7"]
resource_name = "run"
length = 0.66
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.13, 0.19, 0.25, 0.31, 0.37, 0.43, 0.49, 0.55, 0.61),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_er680"]
_data = {
"RESET": SubResource("Animation_vi650"),
"attack": SubResource("Animation_3mn8l"),
"die": SubResource("Animation_rsf2q"),
"hurt": SubResource("Animation_w8571"),
"idle": SubResource("Animation_ew2jv"),
"run": SubResource("Animation_uoqy7")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4g8fi"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jfdop"]
animation = &"die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0gnf8"]
animation = &"hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y7bkp"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8dt61"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nrm3c"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uul6v"]
advance_mode = 2
advance_condition = &"isRunning"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_81apq"]
advance_mode = 2
advance_condition = &"isAttacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6upg4"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ckavp"]
advance_mode = 2
advance_condition = &"isAttacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jn3f7"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xmp3y"]
reset = false
switch_mode = 2
advance_mode = 2
advance_condition = &"isHurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c5kj5"]
switch_mode = 2
advance_mode = 2
advance_condition = &"isRunning"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dbr3p"]
switch_mode = 2
advance_mode = 2
advance_condition = &"isIdle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4fjoe"]
advance_mode = 2
advance_condition = &"isHurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rbsik"]
advance_mode = 2
advance_condition = &"isRunning"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_p24ho"]
states/End/position = Vector2(1054.67, 183.556)
states/Start/position = Vector2(82.4691, 145.778)
states/attack/node = SubResource("AnimationNodeAnimation_4g8fi")
states/attack/position = Vector2(341.185, 383.333)
states/die/node = SubResource("AnimationNodeAnimation_jfdop")
states/die/position = Vector2(754.667, 350.444)
states/hurt/node = SubResource("AnimationNodeAnimation_0gnf8")
states/hurt/position = Vector2(806.667, 227.333)
states/idle/node = SubResource("AnimationNodeAnimation_y7bkp")
states/idle/position = Vector2(340.691, 145.704)
states/run/node = SubResource("AnimationNodeAnimation_8dt61")
states/run/position = Vector2(206.667, 235.778)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_nrm3c"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_uul6v"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_81apq"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_6upg4"), "run", "attack", SubResource("AnimationNodeStateMachineTransition_ckavp"), "attack", "run", SubResource("AnimationNodeStateMachineTransition_jn3f7"), "run", "hurt", SubResource("AnimationNodeStateMachineTransition_xmp3y"), "hurt", "run", SubResource("AnimationNodeStateMachineTransition_c5kj5"), "hurt", "idle", SubResource("AnimationNodeStateMachineTransition_dbr3p"), "idle", "hurt", SubResource("AnimationNodeStateMachineTransition_4fjoe"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_rbsik")]
graph_offset = Vector2(0, 132.273)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_kc6q6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_we1fp"]
size = Vector2(2, 6)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fn77t"]
radius = 2.0
height = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xjup7"]
radius = 2.0
height = 12.0

[node name="player" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_50uxn")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.176875, 0.187273)
texture = ExtResource("2_y5m0e")
hframes = 10
vframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_er680")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_p24ho")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_kc6q6")
parameters/conditions/isAttacking = false
parameters/conditions/isHurt = false
parameters/conditions/isIdle = true
parameters/conditions/isRunning = false

[node name="bodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_we1fp")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_fn77t")

[node name="Sound" type="Node" parent="."]

[node name="swordHitBox" type="Area2D" parent="."]
position = Vector2(1, 0)
collision_layer = 8
collision_mask = 8

[node name="swordCollider" type="CollisionShape2D" parent="swordHitBox"]
position = Vector2(3, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xjup7")
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -300
limit_top = -200
limit_right = 1775
limit_bottom = 900
limit_smoothed = true

[node name="Sounds" type="Node" parent="."]

[node name="swordSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("3_0q5kj")
volume_db = 2.0
max_distance = 50000.0

[node name="hurt" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2(0, 1)
stream = ExtResource("4_e7imv")
volume_db = 3.0

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree" flags=6]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="swordHitBox" to="." method="_on_sword_hit_box_body_entered"]
